@@ -52,11 +52,11 @@ $prevYmd = date ( 'Ymd', $prev );
 
 if ( ! empty ( $BOLD_DAYS_IN_YEAR ) && $BOLD_DAYS_IN_YEAR == 'Y' ) {
   $boldDays = true;
-  $startdate = mktime ( 0, 0, 0, $thismonth - 1, 1, $thisyear );
+  $startdate = mktime ( 0, 0, 0, $thismonth - 1, 0, $thisyear );
   $enddate = mktime ( 23, 59, 59, $thismonth + 2, 0, $thisyear );
 } else {
   $boldDays = false;
-  $startdate = mktime ( 0, 0, 0, $thismonth, 1, $thisyear );
+  $startdate = mktime ( 0, 0, 0, $thismonth, 0, $thisyear );
   $enddate = mktime ( 23, 59, 59, $thismonth + 1, 0, $thisyear );
 }
 
